# tdd_lab6

./: .env  README.md  docker-compose.yml  pyproject.toml  test.env
docker/testrunner/: Dockerfile
docker/web/: Dockerfile
src/tdd_lab6/: main.py  settings.py
src/tdd_lab6/dependencies/: repositories.py  services.py
src/tdd_lab6/exceptions/: __init__.py  errors.py  handlers.py
src/tdd_lab6/models/: item.py
src/tdd_lab6/repositories/: __init__.py  item_repository.py
src/tdd_lab6/routers/: __init__.py  item.py
src/tdd_lab6/schemas/: item.py
src/tdd_lab6/services/: __init__.py  item_service.py
tests/: conftest.py  test_api.py  test_repository.py  test_service.py
